--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unhead/vue": "^2.0.3",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.6.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
